--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html> <!--be sure to have the minimum of 320px planned for-->
+<!doctype html> 
 <html lang = "en">
 <head>
     <!-- GENERAL INFO -->
@@ -53,5 +53,6 @@
     <script src="mealSelection.js"></script>
     <script src="mealRendering.js"></script>
     <script src="mealClasses.js"></script>
+    <script src="shoppingListCreation.js"></script>
     <span id="ruler"></span>
 </body>
