First attempt at adjusting viewport size based on phone browser UI (also first try at error handling!

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class = "viewClosed navButton" id = 'listSelector'>List View</div>
         </div>
     </div>
-
+    <div id = "errorPage">There was an error. Please wait for the page to reload!</div>
     <div class="tenor-gif-embed" id = "loadingGif" data-postid="4774531" data-share-method="host" data-width="100%" data-aspect-ratio="2.3380281690140845"><a href="https://tenor.com/view/math-thinking-calculating-zachgalifianakis-the-hangover-gif-4774531">Math Thinking GIF</a> from <a href="https://tenor.com/search/math-gifs">Math GIFs</a></div>
     <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
 
